<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="computer_first_switch"
        android:summary="@string/pref_description_computer_first"
        android:title="@string/pref_title_computer_first" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="Medium"
        android:entries="@array/pref_difficulty_titles"
        android:entryValues="@array/pref_difficulty_values"
        android:key="difficulty_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_difficulty" />

</PreferenceScreen>
