<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_padding_top"
    tools:context="com.arena.software.xand0.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutRules"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="64dp">
                <TextView
                    android:text="@string/game_rules"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gamerules"
                    android:textStyle="normal|bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/text_size_about"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutRulesContent"
                android:gravity="left"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_padding_top"
                android:layout_below="@+id/layoutRules">
                <TextView
                    android:text="@string/game_rules_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gamerulescontent"
                    android:paddingTop="@dimen/activity_padding_top"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/text_size_about"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutDifficultyLevels"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_padding_top"
                android:layout_below="@+id/layoutRulesContent">
                <TextView
                    android:text="@string/difficulty_levels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/difficultyleveles"
                    android:paddingTop="@dimen/activity_padding_top"
                    android:textStyle="normal|bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/text_size_about"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutDifficultyLevelsContent"
                android:gravity="left"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_padding_top"
                android:layout_below="@+id/layoutDifficultyLevels">

                <TextView
                    android:text="@string/difficulty_levels_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/difficultylevelescontent"
                    android:paddingTop="@dimen/activity_padding_top"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/text_size_about"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutStartGame"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_padding_top"
                android:layout_below="@+id/layoutDifficultyLevelsContent">
                <TextView
                    android:text="@string/start_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/startgame"
                    android:paddingTop="@dimen/activity_padding_top"
                    android:textStyle="normal|bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/text_size_about"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutStartGameContent"
                android:gravity="left"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_padding_top"
                android:layout_below="@+id/layoutStartGame">

                <TextView
                    android:text="@string/start_game_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/startgamecontent"
                    android:paddingTop="@dimen/activity_padding_top"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/text_size_about"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutResetScores"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_padding_top"
                android:layout_below="@+id/layoutStartGameContent">
                <TextView
                    android:text="@string/reset_scores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/resetscores"
                    android:paddingTop="@dimen/activity_padding_top"
                    android:textStyle="normal|bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/text_size_about"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutResetScoresContent"
                android:gravity="left"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_padding_top"
                android:layout_below="@+id/layoutResetScores">
                <TextView
                    android:text="@string/reset_scores_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/resetscorescontent"
                    android:paddingTop="@dimen/activity_padding_top"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/text_size_about"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
